# agario-rl-experiment

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
agario_rl/: __init__.py  human_eval.py  opponents.py
agario_rl/env/: entities.py  gym_env.py  world.py
agario_rl/play/: __init__.py  input.py  session.py
agario_rl/rendering/: __init__.py  backend.py  factory.py  models.py  raylib_backend.py  view_model.py
agario_rl/rl/: __init__.py  async_trainer.py  buffer.py  networks.py  peer_imitation.py  ppo_shared.py
checkpoints/: checkpoint_00500.pt  latest.pt
config/: default.yaml
docs/: blog-case-study.md  controls_and_tuning.md  experiment-results.md  how_it_learns.md  linkedin-post.md  quickstart.md  runtime_architecture.md
logs/: human_ready_baseline_500.json  human_ready_v1_eval.json  human_ready_v1_train_metrics.csv  train_metrics.csv
scripts/: benchmark_perf.py  eval.py  eval_human_readiness.py  generate_report_assets.py  play.py  supervise.py  train.py  train_human_ready.py
tests/: __init__.py  test_action_mode_compat.py  test_async_training.py  test_controller_ui_toggles.py  test_observation_compute_flags.py  test_observation_shape.py  test_opponents_and_human_eval.py  test_peer_imitation_buffer.py  test_play_mode.py  test_raylib_layout_scaling.py  test_render_backend_factory.py  test_render_backend_integration.py  test_render_cli.py  test_render_frame_snapshot.py  test_render_ui_flags.py  test_reward_and_done.py  test_supervisor_runtime_stats.py  test_training_logging.py  test_training_resume.py  test_world_rules.py
(+10 files in other folders)
